database_integrated_with_AsyncConsumer

--- a/websocket_app/templates/websocket_app/room.html
+++ b/websocket_app/templates/websocket_app/room.html
@@ -27,7 +27,7 @@
         const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
-            + '/ws/sync_consumer/'
+            + '/ws/async_consumer/'
             + roomName
             + '/'
         );
