--- a/websocket_app/templates/websocket_app/room.html
+++ b/websocket_app/templates/websocket_app/room.html
@@ -34,10 +34,10 @@
 
         chatSocket.onmessage = function(e) {
             console.log("onmessage log e ", e);
-            const data = e.data;
-            document.querySelector('#chat-log').value += (data + '\n');
+            const data = JSON.parse(e.data);
+            document.querySelector('#chat-log').value += (data.user+ ' ' +data.message + '\n');
         };
-
+        
         chatSocket.onclose = function(e) {
             console.error('Chat socket closed unexpectedly');
         };
