--- a/websocket_app/templates/websocket_app/index.html
+++ b/websocket_app/templates/websocket_app/index.html
@@ -6,6 +6,9 @@
     <title>Chat Rooms</title>
 </head>
 <body>
+
+    <h1> Counter : <span id="span_tag_id"></span></h1>
+
     What chat room would you like to enter?<br>
     <input id="room-name-input" type="text" size="100"><br>
     <input id="room-name-submit" type="button" value="Enter">
